# cxnes

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  development.md  download.md  index.html  index.md  params.json  screenshots.md
_includes/: footer.html  header.html
_layouts/: default.html
boards/: 1200in1.c  150in1.c  20in1.c  22in1.c  35in1.c  74x139_74.c  74x161_161_32.c  76in1.c  action52.c  action53.c  agci_50282.c  axrom.c  bandai.c  bmc_110in1.c  bmc_1200in1.c  bmc_150in1.c  bmc_35in1.c  bmc_n625092.c  bmc_super700in1.c  bnrom.c  btl_smb2a.c  btl_smb2b.c  btl_smb2c.c  btl_superbros11.c  caltron_6in1.c  camerica.c  cne_decathlon.c  cne_psb.c  cnrom.c  colordreams.c  contra_100in1.c  cprom.c  cufrom.c  fds.c  gamestar.c  gxrom.c  ines201.c  ines225.c  ines36.c  inlnsf.c  (+71 more)
boards/audio/: emu2413.c  fds_audio.c  mmc5_audio.c  namco163_audio.c  sunsoft5b_audio.c  vrc6_audio.c  vrc7_audio.c
boards/timer/: a12_timer.c  m2_timer.c
data/: cxnes.desktop  gamecontrollerdb.txt  nsf.asm  nsf.rom  romdb.txt
data/orig_nsf_source/: font.chr  nsf.asm
debian/: changelog  control  copyright  gbp.conf  rules
doc/: configuration.md  configuration.txt  example.cfg  icon_license.txt  icon_readme.txt  input_bindings.txt  nsf.txt
include/: a12_timer.h  actions.h  apu.h  archive.h  audio.h  board.h  board_private.h  board_types.h  cheat.h  config.h  config_private.h  controller.h  cpu.h  crc32.h  db.h  emu.h  emu2413.h  fds.h  fds_audio.h  file_io.h  gtkconfig.h  gui.h  hqx.h  ines.h  input.h  io.h  license.h  log.h  m2_timer.h  mmc3.h  mmc5_audio.h  namco163_audio.h  nes_ntsc.h  nes_ntsc_config.h  nes_ntsc_impl.h  nsf.h  palette.h  patch.h  ppu.h  rom.h  (+11 more)
include/7z/: 7z.h  7zBuf.h  7zCrc.h  7zFile.h  Bcj2.h  Bra.h  CpuArch.h  Lzma2Dec.h  LzmaDec.h  Ppmd.h  Ppmd7.h  Types.h
input/: arkanoid.c  controller.c  keyboard.c  konami_hyper_shot.c  mat.c  microphone.c  snes_mouse.c  vs_unisystem.c  zapper.c
main/: apu.c  archive.c  archive_7zip.c  archive_null.c  archive_zip.c  blip_buf.c  board.c  cheat.c  config.c  config_dummy.c  config_flatfile.c  cpu.c  crc32.c  db.c  emu.c  fds.c  ines.c  input.c  io.c  nes_ntsc.c  nsf.c  palette.c  patch.c  ppu.c  rom.c  sha1.c  split_rom.c  state.c  text_buffer.c  unif.c
main/7z/: 7zAlloc.c  7zBuf.c  7zBuf2.c  7zCrc.c  7zCrcOpt.c  7zDec.c  7zFile.c  7zIn.c  7zStream.c  Bcj2.c  Bra.c  Bra86.c  CpuArch.c  Lzma2Dec.c  LzmaDec.c  Ppmd7.c  Ppmd7Dec.c
sdl/: audio.c  file_io.c  log.c  main.c  sdl_audio.c  sdl_input.c  sdl_video.c  video.c
sdl/gtk/: gtk_cocoa_helpers.m  gtk_prep_quartz_drawing_area.m  gtk_prep_win32_drawing_area.c  gtk_prep_x11_drawing_area.c  gtkbindingconfig.c  gtkcheats.c  gtkconfig.c  gtkjoystickinfo.c  gtkmain.c  gtkmenubar.c  gtkvideoconfig.c  windows_resources.rc
stylesheets/: stylesheet.css
tests/: apu_tests  cpu_tests  dma_tests  mmc3_tests  ppu_tests  test_harness.pl
